// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > matches snapshot for disabled state 1`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center rounded-md transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none bg-[var(--color-primary)] text-white hover:bg-[var(--color-primary-hover)] focus:ring-[var(--color-primary)] shadow-[var(--shadow-sm)] px-4 py-2 text-base font-semibold"
    disabled=""
  >
    Disabled Button
  </button>
</DocumentFragment>
`;

exports[`Button > matches snapshot for ghost variant 1`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center rounded-md transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none bg-transparent text-[var(--color-text-secondary)] hover:bg-[var(--color-bg-tertiary)] focus:ring-[var(--color-border-secondary)] px-4 py-2 text-base font-semibold"
  >
    Ghost Button
  </button>
</DocumentFragment>
`;

exports[`Button > matches snapshot for outline variant 1`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center rounded-md transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none border-2 border-[var(--color-primary)] bg-transparent text-[var(--color-primary)] hover:bg-[var(--color-primary-light)] focus:ring-[var(--color-primary)] px-4 py-2 text-base font-semibold"
  >
    Outline Button
  </button>
</DocumentFragment>
`;

exports[`Button > matches snapshot for primary variant 1`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center rounded-md transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none bg-[var(--color-primary)] text-white hover:bg-[var(--color-primary-hover)] focus:ring-[var(--color-primary)] shadow-[var(--shadow-sm)] px-4 py-2 text-base font-semibold"
  >
    Primary Button
  </button>
</DocumentFragment>
`;

exports[`Button > matches snapshot for secondary variant 1`] = `
<DocumentFragment>
  <button
    class="inline-flex items-center justify-center rounded-md transition-colors focus:outline-none focus:ring-2 focus:ring-offset-2 disabled:opacity-50 disabled:pointer-events-none bg-[var(--color-bg-tertiary)] text-[var(--color-text-primary)] hover:bg-[var(--color-border-secondary)] focus:ring-[var(--color-border-secondary)] shadow-[var(--shadow-sm)] px-4 py-2 text-base font-semibold"
  >
    Secondary Button
  </button>
</DocumentFragment>
`;
